--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
-    "pages/index/index",
     "pages/add-inter/index",
+    "pages/index/index",
+    "pages/inter-detail/index",
     "pages/inter-calendar/index"
   ],
   "window": {
