--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,7 @@
     "pages/inter-calendar/index"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
+    "backgroundColor": "#f9f8fd",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
