feat: 详情页添加按钮

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,7 @@
     "backgroundColor": "#f9f8fd",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "面管",
     "navigationBarTextStyle": "black",
     "navigationStyle": "custom"
   },
