feat: 添加删除逻辑

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -14,5 +14,9 @@
     "navigationStyle": "custom"
   },
   "sitemapLocation": "sitemap.json",
-  "style": "v2"
+  "style": "v2",
+
+  "useExtendedLib": {
+    "weui": true
+  }
 }
